# AIAGENT

./: .gitignore
agent_dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
agent_dashboard/src/: App.jsx  api.js  index.css
agent_dashboard/src/components/: Dashboard.jsx  JobList.jsx  JobSubmit.jsx  Sidebar.jsx  StatusPill.jsx
agent_dashboard/src/hooks/: useJobPoller.js
agent_service/: .dockerignore  .gitignore  CASE_STUDY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tradeoffs.md
agent_service/app/: __init__.py  agent.py  config.py  main.py  middleware.py  schemas.py  worker.py
agent_service/script/: client.py
agent_service/tests/: conftest.py  test_agent.py  test_api.py  test_schemas.py  test_worker.py
