[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-service"
version = "0.1.0"
description = "Production FastAPI LLM Agent Service with async job queues"
requires-python = ">=3.12"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",   # standard = with websockets + watchfiles for hot reload

    # --- LLM + Agent ---
    "google-generativeai>=0.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",

    # --- Async job queue ---
    "arq>=0.26",                 # async Redis queue — built on asyncio, not Celery
    "redis[asyncio]>=5.0",       # async Redis client

    # --- Validation & config ---
    "pydantic>=2.0",
    "pydantic-settings>=2.0",    # reads from .env automatically

    # --- Observability ---
    "structlog>=24.0",           # structured JSON logging (not print statements)
    "langfuse>=2.0",             # LLM tracing (optional, gracefully skipped if not configured)

    # --- Utilities ---
    "python-dotenv>=1.0",
    "httpx>=0.27",               # async HTTP client (also used by test client)
    "tenacity>=8.0",             # retry logic with exponential backoff
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",      # async test support
    "pytest-mock>=3.12",         # mock/patch helpers
    "httpx>=0.27",               # AsyncClient for FastAPI testing
    "fakeredis[aioredis]>=2.23", # in-memory Redis for tests — no real Redis needed
    "coverage>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"            # all async test functions run without @pytest.mark.asyncio
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true